policies/tests/require-istio-sidecar/resource-fail.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-no-mesh
  labels:
    app.kubernetes.io/part-of: sre-platform
