policies/tests/require-istio-sidecar/resource-pass.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: team-alpha
  labels:
    istio-injection: "enabled"
    app.kubernetes.io/part-of: sre-platform
